add full project

--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
         <div class="container">
             <div class="footer-content" style="text-align: center;">
                 <div class="footer-section">
-                    <p>This is an anonymous research demonstration For academic purposes only</p>
+                    <p>This is an research demonstration for academic purposes only</p>
                 </div>
             </div>
         </div>
