--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <ul class="nav-menu">
                     <li><a href="#home">Home</a></li>
                 <li><a href="#abstract">Abstract</a></li>
-                <li><a href="#audio">Music Example</a></li>
+                <li><a href="#audio">Audio Samples</a></li>
                 </ul>
             </div>
         </nav>
